# sdFormatLinux-Gui

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/: sdformat-linux-gui.desktop
src/: main.rs
